# devblog

./: .gitignore  404.html  Makefile  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
2022/07-10---choosing-a-tech-stack-for-my-card-game-platform/: index.html
2022/07-12---building-a-markdown-based-blog/: index.html
2022/07-19---from-scratch-to-online-in-production-in-a-single-day-with-django-part-1/: index.html
2022/07-22---from-scratch-to-online-in-production-in-a-single-day-with-django-part-2/: index.html
2022/07-26---triggering-a-github-action-from-an-external-source/: index.html
2022/07-28---making-sqlite-much-faster-in-a-local-dev-environment/: index.html
2022/08-09---from-scratch-to-online-in-production-in-a-single-day-with-django-part-3/: index.html
2022/08-22---porting-a-python-web-app-to-go/: index.html
2022/11-11---using-alembic-with-with-sqlalchemy-2/: index.html
2023/05-17---til-content-hash-in-the-form-of-a-uuid/: index.html
2023/05-26---let-s-try-kitty-layouts/: index.html
2023/08-18---business_logic.py/: index.html
docs/: .pages  CNAME  index.md  tags.md
docs/2022/: 07-10---choosing-a-tech-stack-for-my-card-game-platform.md  07-12---building-a-markdown-based-blog.md  07-19---from-scratch-to-online-in-production-in-a-single-day-with-django-part-1.md  07-22---from-scratch-to-online-in-production-in-a-single-day-with-django-part-2.md  08-22---porting-a-python-web-app-to-go.md  (+4 more)
search/: search_index.json
stylesheets/: extra.css
tags/: index.html
(+6 files in other folders)
