[tool.poetry]
name = "devblog"
version = "0.1.0"
description = "My devblog"
authors = ["Olivier Philippon <olivier@dunsap.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.3.9"
mkdocs-awesome-pages-plugin = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
